fix: fix note on mobile

--- a/src/components/ArticlePageContent/style.scss
+++ b/src/components/ArticlePageContent/style.scss
@@ -5,6 +5,10 @@
   margin: 100px 25%;
 
   @media screen and (max-width: $break-tablet) {
+    margin: 80px 15%;
+  }
+
+  @media screen and (max-width: $break-mobile) {
     margin: 80px 8%;
   }
 }
@@ -21,8 +25,8 @@
 .article-page blockquote {
   margin: 15px 20px 25px 20px;
   padding: 10px 20px 10px 20px;
-  background-color: rgba(0, 0, 0, 0.1);
-  border: $dark-caption-text 2px solid;
+  background-color: rgba(0, 0, 0, 0.03);
+  border: $dark-caption-text 1px solid;
   border-radius: 5px;
 }
 
